=== HEAD

* Automatically alias single expressions in Dataset#get, #select_map, and #select_order_map, to work around possible DoS issues (jeremyevans)

* Default to deep qualification when joining (jeremyevans)

* Use a connection queue instead of stack by default for threaded connection pools (jeremyevans)

* Remove SQL::SQLArray alias for SQL::ValueList (jeremyevans)

* Remove SQL::NoBooleanInputMethods empty module (jeremyevans)

=== 3.48.0 (2013-06-01)

* Make named_timezones extension usable by databases allowing timezone strings to be given to Database#timezone= (jeremyevans)

* Make Dataset#or just clone if given an empty argument (jeremyevans)

* Deprecated using a mismatched number of placeholders and arguments in a placeholder literal string (jeremyevans)

* Add Dataset#qualify_to and #qualify_to_first_source to sequel_3_dataset_methods extension (jeremyevans)

* Add scissors plugin for Model.update, .delete, and .destroy (jeremyevans)

* Validate against explicit nil values in NOT NULL columns with default values in the auto_validations plugin (jeremyevans)

* Support :not_null=>:presence option for auto_validations plugin, for using presence validation for not null columns (jeremyevans)

* Rename auto_validate_presence_columns to auto_validate_not_null_columns (jeremyevans)

* Make pg_hstore_ops extension integrate with pg_array, pg_hstore, and pg_array_ops extensions (jeremyevans)

* Add Sequel.json_parser_error_class and Sequel.object_to_json to allow the use of alternative JSON implementations (jeremyevans) (#662)

* Deprecate JSON.create_id usage in the json_serializer plugin (jeremyevans)

* Emulate offsets on Microsoft Access using reverse orders and total counts (jeremyevans) (#661)

* Make ado adapter handle disconnecting an already disconnected connection (jeremyevans)

* Deprecate parsing columns for the same table name in multiple schemas on jdbc (jeremyevans)
