@@ -54,9 +54,6 @@ module Sequel
   # method, and the dataset does not yield any rows.
   class NoMatchingRow < Error; end
 
-  # Error raised when the adapter adapter hasn't implemented a method such as +tables+:
-  class NotImplemented < Error; end
-
   # Error raised when the connection pool cannot acquire a database connection
   # before the timeout.
   class PoolTimeout < Error; end
