@@ -1,5 +1,7 @@
 === HEAD
 
+* Remove Sequel::NotImplemented exception (jeremyevans)
+
 * Automatically alias single expressions in Dataset#get, #select_map, and #select_order_map, to work around possible DoS issues (jeremyevans)
 
 * Default to deep qualification when joining (jeremyevans)
